log-aggregation-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-aggregation
  namespace: elizabeth-villanueva
  labels:
    app: log-aggregation
spec:
  selector:
    matchLabels:
      app: log-aggregation
  replicas: 1
  template:
    metadata:
      labels: 
        app: log-aggregation
    spec:
      volumes:
      - name: config
        configMap:
          name: fluent-conf
      containers:
      - name: fluentd
        ports:
        - containerPort: 24224
        image: grafana/fluent-plugin-loki:latest
        volumeMounts:
        - name: config
          mountPath: /fluentd/etc/fluent.conf
          subPath: fluent.conf
      - name: project1
        ports: 
        - containerPort: 8080
        image: evilla40/project1:latest
