log-aggregation-service.yml
apiVersion: v1
kind: Service
metadata:
  name: log-aggregation
  namespace: elizabeth-villanueva
spec:
  selector:
    app: log-aggregation
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
